--- a/css/components/header.css
+++ b/css/components/header.css
@@ -1,1 +1,35 @@
-
+.container-head {
+  display: flex;
+  justify-content: space-between;
+}
+.logo {
+  display: flex;
+  align-items: center;
+}
+.logo-name {
+font-family: Raleway;
+font-size: 34px;
+font-weight: 400;
+letter-spacing: -1.36px;
+}
+.logo-img {
+width: 64px;
+height: 56px;
+}
+.logo-img:hover {
+  transform: rotate(180deg);
+  transition: all 1s ease-out;
+}
+.header-icons {
+  height: 60px;
+  display: flex;
+  align-items:center;
+}
+.header-icons>li {
+  padding: 0 14px;
+  list-style-type: none;
+}
+.header-icon {
+  width: 18px;
+  height: 24px;
+}
