--- a/css/components/header.css
+++ b/css/components/header.css
@@ -1,7 +1,12 @@
+.header {
+  padding-top: 20px;
+  position: relative;
+}
 .container-head {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0 20px;
 }
 .logo {
   display: flex;
@@ -11,6 +16,7 @@ font-family: Raleway;
 font-size: 20px;
 font-weight: 400;
 letter-spacing: -1.36px;
+padding-right: 30px;
 }
 .logo-img {
 width: 30px;
@@ -29,6 +35,7 @@ height: 30px;
   list-style-type: none;
 }
 ul.header-icons {
+  padding: 0;
   margin: 0;
 }
 .header-icons>img{
@@ -36,7 +43,12 @@ ul.header-icons {
   height: 100px;
 }
 @media (min-width: 320px) {
+  .uk-button .burger-img {
+    width: 20px;
+    height: 20px;
+  }
   .header-icon {
   width: 18px;
   height: 24px;
   }
+}
