--- a/css/components/card.css
+++ b/css/components/card.css
@@ -36,22 +36,23 @@
 .card-portfolio .card-title {
 
 }
-.card-link {
+.card-decoration {
+  width: 50px;
+  height: 30px;
+  background-color: transparent;
+}
 
+.card-link {
   color: black;
 }
+
 .card-link:hover {
-  transition: all 1s ease-out;
+
   cursor: pointer;
   color: #c7b299;
   text-decoration: none;
 }
-.card .card-decoration {
-  display: none;
-  width: 50px;
-  height: 10px;
-  border-bottom: solid 1px blue;
-}
-.card-link:hover .card-decoration {
-  display: block;
+.s-a:hover .card-decoration {
+  display: flex;
+  border-bottom: solid 1px  #c7b299;
 }
