--- a/css/main.css
+++ b/css/main.css
@@ -6,3 +6,5 @@
 @import url('components/card.css');
 @import url('components/navigation.css');
 @import url('components/hero.css');
+@import url('components/fonts.css');
+@import url('components/section.css');
