--- a/css/components/section.css
+++ b/css/components/section.css
@@ -1,3 +1,33 @@
 .section {
+  margin-top: 50px;
   overflow: hidden;
 }
+.section-title {
+text-align: center;
+color: #555555;
+font-family: Raleway;
+font-size: 20px;
+font-weight: 600;
+}
+.section-description {
+  text-align: center;
+  color: #8c8c8c;
+  font-family: Montserrat;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 28px;
+}
+@media (min-width: 600px) {
+  .section-description {
+    margin: 0 auto;
+    width: 600px;
+  }
+  .s-b-2>img {
+    position:relative;
+    z-index: 999;
+  }
+  .img-inline {
+    padding-top: 60px;
+    display: flex;
+    align-items: flex-end;
+  }
