--- a/css/components/grid.css
+++ b/css/components/grid.css
@@ -8,7 +8,7 @@
 }
 
 .col-1-2 {
-  width: 50%;
+  width: 100%;
 }
 
 .col-1-3 {
@@ -16,5 +16,58 @@
 }
 
 .col-1-4 {
-  width: 25%;
+  width: 100%;
+}
+.aside-img> img{
+  margin-top: 10px;
+  padding-top: 20px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  height: 300px;
+  object-fit: contain;
+}
+ .right-arrow {
+   position: relative;
+   overflow: visible;
+   padding: 5px 0px;
+ }
+.right-arrow::before {
+  content: '';
+  background-image: url(../../images/arrow.png);
+  background-repeat:no-repeat;
+  top: 50%;
+  transform: translateY(-50%);
+  left: -9%;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+}
+.article-list {
+  margin-left: 60px;
+  list-style-type: none;
+  color: #8c8c8c;
+font-family: Montserrat;
+font-size: 10px;
+font-weight: 300;
+line-height: 32px;
+}
+@media (min-width: 600px) {
+  .col-1-4 {
+    width: 40%;
+  }
+.col-1-2>p {
+  text-align: left;
+  margin: 0;
+}
+  .col-1-2 {
+    width: 60%;
+  }
+  .aside-img> img{
+    box-shadow: none;
+  }
+  .right-arrow::before {
+
+    left: -4%;
+
+
+  }
 }
