--- a/css/main.css
+++ b/css/main.css
@@ -8,3 +8,4 @@
 @import url('components/hero.css');
 @import url('components/fonts.css');
 @import url('components/section.css');
+@import url('components/video.css');
