--- a/css/components/video.css
+++ b/css/components/video.css
@@ -1,6 +1,11 @@
-.video-play {
-  width: 100px;
-height: 100px;
-background-color: #000000;
-opacity: 0.2;
-border-radius: 50%;}
+iframe {
+  width: 100%;
+    height: auto;
+}
+@media (min-width: 600px) {
+  iframe {
+    width: 100%;
+    height: 700px;
+  }
+
+}
